Fixing styling of letter spacing on About sub-menu

--- a/themes/lovesea/sass/_about.scss
+++ b/themes/lovesea/sass/_about.scss
@@ -78,8 +78,10 @@
         padding: 0 1.25rem;
         font-style: italic;
         font-weight: lighter;
+        letter-spacing: 1.2px;
         @include desktop {
           font-size: 20px;
+          letter-spacing: 1.2px;
         }
       }
     }
