--- a/themes/lovesea/style.css
+++ b/themes/lovesea/style.css
@@ -946,7 +946,9 @@ object {
   .about-sub-pages li {
     padding: 0 1.25rem;
     font-style: italic;
-    font-weight: lighter; }
+    font-weight: lighter;
+    letter-spacing: 1.2px; }
     @media (min-width: 600px) {
       .about-sub-pages li {
-        font-size: 20px; } }
+        font-size: 20px;
+        letter-spacing: 1.2px; } }
